Setting up the html file, with new buttons and the round text

--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Rock-Paper-Scissors</title>
 </head>
 
 <body>
+    <div class="header-content">
+        <!-- <img src="images/rockpaperscissors.png" alt="rockpaperscissors image"> -->
+        <h1 class="title-content">Rock - Paper - Scissors Videogame:</h1>
+        <div class="title-p">
+            <div class="p-one">Players start each round by click on: “rock, paper or scissors” fist for rock, flat
+                hand for paper, or their index and middle finger for scissors.</div>
+            <div class="p-two"><strong>Rock crushes scissors, scissors cut paper, and paper covers rock.</strong></div>
+            <div class="p-three">See who wins each round!</div>
+        </div>
+    </div>
 
+    <div class="game-content">
+        <h3 class="round-content">Round: </h3>
+        <p> Select your hand: </p>
+        <div class="buttons">
+            <button> Rock </button>
+            <button> Paper </button>
+            <button> Scissors</button>
+        </div>
+    </div>
 </body>
 
 </html>
